<resources>
    <string name="app_name">Task Manager</string>
    <string name="version_name">version 1.0.0</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_tasks">My Tasks</string>
    <string name="daily_tasks">Daily Tasks</string>
    <string name="share">Share</string>
    <string name="about">About</string>
</resources>
